upload 파일 등록, 취소 버튼시 Intent 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,6 @@
 
         <activity android:name=".LoginActivity"/>
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".Upload" />
         <activity android:name=".Update" />
         <activity android:name=".SplashActivity">
             <intent-filter>
@@ -45,6 +44,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".Upload" android:label="posting"/>
     </application>
 
 </manifest>
