--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
         </activity>
         <activity android:name=".MainActivity"/>
         <activity android:name=".Upload" android:label="posting"/>
+        <activity android:name=".post"/>
     </application>
 
 </manifest>
